[package]
name = "gradcap-rs"
version = "0.1.0"
authors = ["Eric Park <me@ericswpark.com>"]
edition = "2024"

[[bin]]
name = "gradcap-rs"
test = false
bench = false

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "1.0.0"
smart-leds = "0.4.0"
ufmt = "0.2.0"
ws2812-avr = { git = "https://github.com/ericswpark/ws2812-avr", features = ["attiny85"] }

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
features = ["attiny85", "rt"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
